# mdbook-template

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  flake.nix  shell.nix
.github/scripts/: build.bash  test.bash
.github/workflows/: build.yml  deploy.yml
examples/default-value/: book.toml
examples/default-value/src/: go.md  rust.md
examples/default-value/src/friends/: hazel.md
examples/default-value/src/templates/: footer.md
examples/readme/: README.md  book.toml
examples/readme/src/: SUMMARY.md  go.md  rust.md
examples/readme/src/friends/: hazel.md
examples/readme/src/templates/: footer.md
src/: lib.rs  links.rs  utils.rs
