[package]
name = "mdbook-template"
version = "1.1.1+deprecated"
edition = "2021"
authors = ["Goudham Suresh <sgoudham@gmail.com>"]
description = "A mdbook preprocessor that allows the re-usability of template files with dynamic arguments"
license = "MIT"
readme = "README.md"
repository = "https://github.com/sgoudham/mdbook-template"
keywords = ["mdbook", "markdown", "template", "preprocessor", "plugin"]
exclude = [".github/**", "examples"]

[[bin]]
name = "mdbook-template"
path = "src/bin/mdbook-template.rs"

[lib]
name = "mdbook_template"
path = "src/lib.rs"

[dependencies]
clap = "3.1.12"
semver = "1.0.7"
mdbook = "0.4.18"
serde_json = "1.0.79"
anyhow = "1.0.57"
env_logger = "0.10.0"
log = "0.4.16"
lazy_static = "1.4.0"
fancy-regex = "0.10.0"
